--- a/README.Rmd
+++ b/README.Rmd
@@ -14,6 +14,8 @@ knitr::opts_chunk$set(
 
 # coefbounds
 
+[![Travis-CI Build Status](https://travis-ci.org/brentonk/coefbounds.svg?branch=master)](https://travis-ci.org/brentonk/coefbounds)
+
 Nonparametric Bounds for Regression with Interval-Censored Outcomes
 
 Author: Brenton Kenkel, Vanderbilt University
