Add logit models
Linear models and logit models now share the frontend `coefbounds()`,
with the choice between models controlled by the `model` argument.

--- a/README.Rmd
+++ b/README.Rmd
@@ -59,14 +59,14 @@ lwr <- floor(y)
 upr <- ceiling(y)
 ```
 
-To estimate coefficient bounds, use `lm_bounds()` with a formula of the form `yl + yu ~ x1 + x2 + ...`, where `yl` is the lower bound on each response value and `yu` is the upper bound.
+To estimate coefficient bounds, use `coefbounds()` with a formula of the form `yl + yu ~ x1 + x2 + ...`, where `yl` is the lower bound on each response value and `yu` is the upper bound.
 
 ```{r full-bounds}
-fit_full <- lm_bounds(lwr + upr ~ x1 + x2, boot = 100)
+fit_full <- coefbounds(lwr + upr ~ x1 + x2, boot = 100)
 fit_full
 ```
 
-For inference, make sure `lm_bounds()` is run with `boot > 0` and use `interval_hypothesis()` or `confint()`.
+For inference, make sure `coefbounds()` is run with `boot > 0` and use `interval_hypothesis()` or `confint()`.
 
 ```{r int-hyp}
 interval_hypothesis(fit = fit_full,
